--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+scikit-learn = "*"
+flask = "*"
+flask-script = "*"
+pandas = "*"
+numpy = "*"
+seaborn = "*"
+graphene = "*"
+flask-graphql = "*"
 
 [requires]
 python_version = "3.8"
