--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aniso8601==7.0.0
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 Flask==1.1.2
@@ -9,24 +11,27 @@ graphene==2.1.8
 graphql-core==2.3.2
 graphql-relay==2.0.1
 graphql-server-core==1.2.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
-numpy==1.19.4
+numpy==1.19.5
 pandas==1.2.0
-Pillow==8.0.1
+Pillow==8.1.0
 promise==2.3
 pymongo==3.11.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.5
+requests==2.25.1
 Rx==1.6.1
-scikit-learn==0.24.0
-scipy==1.5.4
+scikit-learn==0.24.1
+scipy==1.6.0
 seaborn==0.11.1
 six==1.15.0
 threadpoolctl==2.1.0
+urllib3==1.26.2
 Werkzeug==1.0.1
