--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-GraphQL==2.0.1
+flask-mongoengine==1.0.0
 Flask-PyMongo==2.3.0
 Flask-Script==2.0.6
+Flask-WTF==0.14.3
 graphene==2.1.8
 graphql-core==2.3.2
 graphql-relay==2.0.1
@@ -18,8 +22,9 @@ joblib==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
+mongoengine==0.22.1
 numpy==1.19.5
-pandas==1.2.0
+pandas==1.2.1
 Pillow==8.1.0
 promise==2.3
 pymongo==3.11.2
@@ -35,3 +40,4 @@ six==1.15.0
 threadpoolctl==2.1.0
 urllib3==1.26.2
 Werkzeug==1.0.1
+WTForms==2.3.3
