--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ pymongo = "*"
 flask-pymongo = "*"
 requests = "*"
 flask-mongoengine = "*"
+graphene-mongo = "*"
 
 [requires]
 python_version = "3.8"
