--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ Flask-PyMongo==2.3.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
 graphene==2.1.8
+graphene-mongo==0.2.13
 graphql-core==2.3.2
 graphql-relay==2.0.1
 graphql-server-core==1.2.0
 idna==2.10
+iso8601==0.1.13
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
@@ -36,6 +38,7 @@ Rx==1.6.1
 scikit-learn==0.24.1
 scipy==1.6.0
 seaborn==0.11.1
+singledispatch==3.4.0.3
 six==1.15.0
 threadpoolctl==2.1.0
 urllib3==1.26.2
