--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ flask-pymongo = "*"
 requests = "*"
 flask-mongoengine = "*"
 graphene-mongo = "*"
+graphene-mongodb = "*"
 
 [requires]
 python_version = "3.8"
