--- a/android/client-android/app/src/main/AndroidManifest.xml
+++ b/android/client-android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PureMango">
+        <activity android:name=".ConfirmCodeRecovery"></activity>
+        <activity android:name=".RecoverPassword" />
         <activity android:name=".Signup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +22,14 @@
         </activity>
         <activity android:name=".LoginPage" />
         <activity android:name=".MainActivity">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
     </application>
 
