--- a/android/client-android/app/src/main/AndroidManifest.xml
+++ b/android/client-android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PureMango">
         <activity android:name=".ConfirmCodeRecovery"></activity>
-        <activity android:name=".RecoverPassword" />
+        <activity android:name=".RecoverPassword" >
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
         <activity android:name=".Signup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
