--- a/Pipfile
+++ b/Pipfile
@@ -7,19 +7,38 @@ verify_ssl = true
 
 [packages]
 scikit-learn = "*"
-flask = "*"
-flask-script = "*"
 pandas = "*"
 numpy = "*"
-seaborn = "*"
-graphene = "*"
-flask-graphql = "*"
-pymongo = "*"
-flask-pymongo = "*"
+graphene = "==2.1.3"
 requests = "*"
-flask-mongoengine = "*"
-graphene-mongo = "*"
-graphene-mongodb = "*"
+alembic = "==1.0.7"
+aniso8601 = "==3.0.2"
+click = "==7.0"
+flask-graphql = "==2.0.0"
+graphene-sqlalchemy = "==2.1.0"
+graphql-core = "==2.1"
+graphql-relay = "==0.4.5"
+graphql-server-core = "==1.1.1"
+itsdangerous = "==1.1.0"
+passlib = "==1.7.1"
+promise = "==2.2.1"
+python-dateutil = "==2.8.0"
+python-editor = "==1.0.4"
+singledispatch = "==3.4.0.3"
+six = "==1.12.0"
+Flask = "==1.0.2"
+Flask-Script = "==2.0.6"
+Flask-Migrate = "==2.3.1"
+Flask-JWT-Extended = "==3.17.0"
+Flask-SQLAlchemy = "==2.3.2"
+Jinja2 = "==2.10"
+Mako = "==1.0.7"
+MarkupSafe = "==1.1.0"
+PyJWT = "==1.7.1"
+PyMySQL = "==0.9.3"
+Rx = "==1.6.1"
+SQLAlchemy = "==1.2.17"
+Werkzeug = "==0.14.1"
 
 [requires]
 python_version = "3.8"
