--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,29 @@
-aniso8601==7.0.0
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-cycler==0.10.0
-dnspython==2.1.0
-email-validator==1.1.2
-Flask==1.1.2
-Flask-GraphQL==2.0.1
-flask-mongoengine==1.0.0
-Flask-PyMongo==2.3.0
+alembic==1.0.7
+aniso8601==3.0.2
+Click==7.0
+Flask==1.0.2
+Flask-GraphQL==2.0.0
+Flask-JWT-Extended==3.17.0
+Flask-Migrate==2.3.1
 Flask-Script==2.0.6
-Flask-WTF==0.14.3
-graphene==2.1.8
-graphene-mongo==0.2.13
-graphql-core==2.3.2
-graphql-relay==2.0.1
-graphql-server-core==1.2.0
-idna==2.10
-iso8601==0.1.13
+Flask-SQLAlchemy==2.3.2
+graphene==2.1.3
+graphene-sqlalchemy==2.1.0
+graphql-core==2.1
+graphql-relay==0.4.5
+graphql-server-core==1.1.1
 itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==1.0.0
-kiwisolver==1.3.1
-MarkupSafe==1.1.1
-matplotlib==3.3.3
-mongoengine==0.22.1
-numpy==1.19.5
-pandas==1.2.1
-Pillow==8.1.0
-promise==2.3
-pymongo==3.11.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.5
-requests==2.25.1
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.1.0
+passlib==1.7.1
+promise==2.2.1
+PyJWT==1.7.1
+PyMySQL==0.9.3
+python-dateutil==2.8.0
+python-editor==1.0.4
 Rx==1.6.1
-scikit-learn==0.24.1
-scipy==1.6.0
-seaborn==0.11.1
 singledispatch==3.4.0.3
-six==1.15.0
-threadpoolctl==2.1.0
-urllib3==1.26.2
-Werkzeug==1.0.1
-WTForms==2.3.3
+six==1.12.0
+SQLAlchemy==1.2.17
+Werkzeug==0.14.1
