--- a/android/client-android/build.gradle
+++ b/android/client-android/build.gradle
@@ -6,10 +6,12 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
