--- a/android/client-android/app/src/main/AndroidManifest.xml
+++ b/android/client-android/app/src/main/AndroidManifest.xml
@@ -11,34 +11,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PureMango">
-        <activity android:name=".ConfirmCodeRecovery"></activity>
-        <activity android:name=".RecoverPassword" >
-            <!--<intent-filter>
+        <activity android:name=".AllSales"></activity>
+        <activity android:name=".Prediction" />
+        <activity android:name=".EditProfile" />
+        <activity android:name=".ConfirmCodeRecovery" />
+        <activity android:name=".RecoverPassword">
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity android:name=".Signup">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
-        <activity android:name=".LoginPage" >
+        <activity android:name=".LoginPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-
-
-
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
