--- a/android/client-android/app/src/main/AndroidManifest.xml
+++ b/android/client-android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PureMango">
-        <activity android:name=".AllSales"></activity>
+        <activity android:name=".AllSales">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Prediction" />
         <activity android:name=".EditProfile" />
         <activity android:name=".ConfirmCodeRecovery" />
@@ -36,11 +42,7 @@
             -->
         </activity>
         <activity android:name=".LoginPage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
     </application>
