--- a/android/client-android/app/src/main/AndroidManifest.xml
+++ b/android/client-android/app/src/main/AndroidManifest.xml
@@ -12,13 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PureMango">
         <activity android:name=".AllSales">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".Prediction" />
+        <activity android:name=".Prediction" >
+
+        </activity>
         <activity android:name=".EditProfile" />
         <activity android:name=".ConfirmCodeRecovery" />
         <activity android:name=".RecoverPassword">
@@ -42,7 +40,11 @@
             -->
         </activity>
         <activity android:name=".LoginPage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
     </application>
