--- a/Authentication/src/main/resources/application.properties
+++ b/Authentication/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/AuthenticationSpringMicroservice
+spring.datasource.username=root_arturo
+spring.datasource.password=LikeAStone
 
